refactor: Implement Fragments for Dashboard navigation
Refactors the `DashboardActivity` to use a `FragmentContainerView` and a `BottomNavigationView` to manage different screens (Dashboard, Budget, Profile) as Fragments.

This includes:
- Removing the old layout content from `activity_dashboard.xml` and replacing it with a `FragmentContainerView`.
- Creating `DashboardFragment`, `BudgetFragment`, and `FragmentProfile` to encapsulate the UI and logic for each respective screen.
- Adding new layout files for these fragments: `fragment_dashboard.xml`, `fragment_budget.xml`, and `fragment_profile.xml`.
- Updating `DashboardActivity` to handle Fragment transactions based on `BottomNavigationView` item selection.
- Passing `UserItem` data to each fragment using Bundles.
- Initializing default `Badges` and budget `Categories` directly within the `UserItem` and `Budget` model constructors.
- Adding a new `grey` color resource.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,7 @@ appcompat = "1.7.1"
 material = "1.13.0"
 activity = "1.11.0"
 constraintlayout = "2.2.1"
+materialVersion = "1.14.0"
 viewpager2 = "1.1.0"
 recyclerview = "1.4.0"
 firebaseCrashlyticsBuildtools = "3.0.6"
@@ -22,6 +23,7 @@ appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "a
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+material-v1140 = { module = "com.google.android.material:material", version.ref = "materialVersion" }
 viewpager2 = { module = "androidx.viewpager2:viewpager2", version.ref = "viewpager2" }
 recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version.ref = "recyclerview" }
 firebase-crashlytics-buildtools = { group = "com.google.firebase", name = "firebase-crashlytics-buildtools", version.ref = "firebaseCrashlyticsBuildtools" }
